<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/baby_pink"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="380dp"
        android:layout_height="690dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:backgroundTint="@color/pitch_pink"
        app:cardCornerRadius="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="240dp"
            android:text="@string/welcome_to_androidastro_hub"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:textSize="20sp"

            android:text="@string/intro" />

        <Button
            android:id="@+id/btnGo"
            android:layout_width="239dp"
            android:layout_height="93dp"
            android:layout_gravity="center"
            android:layout_marginTop="250dp"
            android:backgroundTint="@color/dark_pink"
            android:text="@string/let_s_go"
            android:textColor="@color/browny_pink"
            android:textSize="30sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>





</LinearLayout>