<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_logo"
    android:orientation="vertical"
    tools:context=".TechKnowledge">

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="225dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/androidBtn"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="35dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="40dp">

            <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:src="@drawable/img_2" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/iosBtn"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="35dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginStart="20dp"
            app:cardCornerRadius="40dp" >


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="166dp"
                android:layout_height="164dp"
                android:layout_gravity="center"
                android:contentDescription="@string/ios_logo"
                app:srcCompat="@drawable/img_4" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="200dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/webDevBtn"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="40dp" >


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="172dp"
                android:layout_height="194dp"
                android:layout_gravity="center"
                android:contentDescription="@string/webDev_logo"
                app:srcCompat="@drawable/img_6" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/uiBtn"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="40dp" >

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="181dp"
                android:layout_height="168dp"
                android:layout_gravity="center"
                android:contentDescription="@string/ui_logo"
                app:srcCompat="@drawable/img_1" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="200dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/aiBtn"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="40dp" >

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="161dp"
                android:layout_gravity="center"
                android:contentDescription="@string/ai_logo"
                app:srcCompat="@drawable/img_5" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/hackingBtn"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:focusable="true"
            android:clickable="true"
            app:cardCornerRadius="40dp" >

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/img"
                android:contentDescription="@string/hacker_logo" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <Button
        android:id="@+id/callBtn"
        android:layout_width="158dp"
        android:layout_height="74dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/baby_pink"
        android:text="@string/call_us"
        android:textColor="@color/dark_pink"
        android:textSize="20sp"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/note"
        android:textColor="#3E2723"
        tools:ignore="VisualLintBounds" />


</LinearLayout>